{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 334,
  "lineage": "744825c9-1f1e-ca96-2e7d-332426ae58db",
  "resources": [
    {
      "module": "module.auth_service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smart_home_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06010b504f5d7eae6",
            "arn": "arn:aws:ec2:eu-west-2:211125505847:instance/i-02a20442a07369e29",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a20442a07369e29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smart-home-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0896293e6bf54f830",
            "private_dns": "ip-10-0-8-93.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1c29863d7125eb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0525c0728195a9f67",
            "tags": {
              "Name": "auth_service"
            },
            "tags_all": {
              "Name": "auth_service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8a8a8088d8c2c7a"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.auth_service_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smart_home_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:211125505847:instance/i-0820a1279f3428fa0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0820a1279f3428fa0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smart-home-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0203e285cd90824a6",
            "private_dns": "ip-10-0-2-153.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.153",
            "public_dns": "ec2-18-171-212-84.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.212.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2a991d7ead4fd07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a55fc0a880d82f0",
            "tags": {
              "Name": "auth_service_public_setup"
            },
            "tags_all": {
              "Name": "auth_service_public_setup"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8a8a8088d8c2c7a"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.heating_service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smart_home_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:211125505847:instance/i-08d856e0095d14b05",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d856e0095d14b05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smart-home-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05de3e2d4294fdec2",
            "private_dns": "ip-10-0-0-229.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.229",
            "public_dns": "ec2-3-10-24-39.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.24.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09cb6978f844a3777",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fd14e71dc877fdf",
            "tags": {
              "Name": "heating_service"
            },
            "tags_all": {
              "Name": "heating_service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8a8a8088d8c2c7a"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.light_service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smart_home_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:211125505847:instance/i-005782ec435928db1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005782ec435928db1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smart-home-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0083912d5c9ac2af3",
            "private_dns": "ip-10-0-1-54.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-18-168-153-109.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.153.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb34725542c7b719",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c78279507ce23e1b",
            "tags": {
              "Name": "light_service"
            },
            "tags_all": {
              "Name": "light_service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8a8a8088d8c2c7a"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092c13e46cc18a173",
            "association_id": "eipassoc-0093ff7d0b60b5e88",
            "domain": "vpc",
            "id": "eipalloc-092c13e46cc18a173",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0222cdebc2e9efbfb",
            "private_dns": "ip-10-0-0-222.eu-west-2.compute.internal",
            "private_ip": "10.0.0.222",
            "public_dns": "ec2-18-133-111-228.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.111.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "smart_home_eip"
            },
            "tags_all": {
              "Name": "smart_home_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:internet-gateway/igw-07853c9f70db51188",
            "id": "igw-07853c9f70db51188",
            "owner_id": "211125505847",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-igw"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092c13e46cc18a173",
            "association_id": "eipassoc-0093ff7d0b60b5e88",
            "connectivity_type": "public",
            "id": "nat-08d3237e7d6289306",
            "network_interface_id": "eni-0222cdebc2e9efbfb",
            "private_ip": "10.0.0.222",
            "public_ip": "18.133.111.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00fd14e71dc877fdf",
            "tags": {
              "Name": "smart_home_NAT"
            },
            "tags_all": {
              "Name": "smart_home_NAT"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07853c9f70db51188",
            "id": "r-rtb-0ea226895a5cb16e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ea226895a5cb16e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:route-table/rtb-0b8aaaec5fe0798d5",
            "id": "rtb-0b8aaaec5fe0798d5",
            "owner_id": "211125505847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d3237e7d6289306",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smart_home_vpc-private"
            },
            "tags_all": {
              "Name": "smart_home_vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:route-table/rtb-0ea226895a5cb16e3",
            "id": "rtb-0ea226895a5cb16e3",
            "owner_id": "211125505847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07853c9f70db51188",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "smart_home_vpc-public"
            },
            "tags_all": {
              "Name": "smart_home_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d08cedcd09791c9",
            "route_table_id": "rtb-0b8aaaec5fe0798d5",
            "subnet_id": "subnet-0e35bab42306dc5ba"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871264c480461601",
            "route_table_id": "rtb-0b8aaaec5fe0798d5",
            "subnet_id": "subnet-0c90a97ed9d5d9ab1"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b6d261ff2417db",
            "route_table_id": "rtb-0b8aaaec5fe0798d5",
            "subnet_id": "subnet-0525c0728195a9f67"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5990d408a7fd9cd",
            "route_table_id": "rtb-0ea226895a5cb16e3",
            "subnet_id": "subnet-00fd14e71dc877fdf"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092fa5ae430ca61b6",
            "route_table_id": "rtb-0ea226895a5cb16e3",
            "subnet_id": "subnet-0c78279507ce23e1b"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0104506c2ca1ca09a",
            "route_table_id": "rtb-0ea226895a5cb16e3",
            "subnet_id": "subnet-01a55fc0a880d82f0"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:subnet/subnet-0e35bab42306dc5ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e35bab42306dc5ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125505847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-private-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:subnet/subnet-0c90a97ed9d5d9ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c90a97ed9d5d9ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125505847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-private-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:subnet/subnet-0525c0728195a9f67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0525c0728195a9f67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125505847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-private-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:subnet/subnet-00fd14e71dc877fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fd14e71dc877fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125505847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-public-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:subnet/subnet-0c78279507ce23e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c78279507ce23e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125505847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-public-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:subnet/subnet-01a55fc0a880d82f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a55fc0a880d82f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125505847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-public-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "smart_home_vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:vpc/vpc-09d4d9f46bf53a9b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d496e8b5414d0343",
            "default_route_table_id": "rtb-06b00003cb2290cc3",
            "default_security_group_id": "sg-0b4f1027b861dd267",
            "dhcp_options_id": "dopt-06a87c56fe1b18cbf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d4d9f46bf53a9b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b00003cb2290cc3",
            "owner_id": "211125505847",
            "tags": {
              "Name": "smart_home_vpc"
            },
            "tags_all": {
              "Name": "smart_home_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smart_home_security_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group/sg-0d8a8a8088d8c2c7a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8a8a8088d8c2c7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "82.19.178.239/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "smart_home_security_grp",
            "name_prefix": "",
            "owner_id": "211125505847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "smart_home_security_group"
            },
            "tags_all": {
              "Name": "smart_home_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-02007a730285b0824",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02007a730285b0824",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-02007a730285b0824",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-07a968b429304a3e7",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-07a968b429304a3e7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-07a968b429304a3e7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-0bc991d2c0bd4ea8b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0bc991d2c0bd4ea8b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-0bc991d2c0bd4ea8b",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-04e9ccdb5539e92b1",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-04e9ccdb5539e92b1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-04e9ccdb5539e92b1",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-010e114cb311b6894",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-010e114cb311b6894",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-010e114cb311b6894",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-0cd94a33714847c15",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-0cd94a33714847c15",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-0cd94a33714847c15",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-095fbe0840926a842",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-095fbe0840926a842",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-095fbe0840926a842",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-0d329c5d475dfdcb8",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-0d329c5d475dfdcb8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-0d329c5d475dfdcb8",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125505847:security-group-rule/sgr-024f9c7dba62993c0",
            "cidr_ipv4": "82.19.178.239/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-024f9c7dba62993c0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8a8a8088d8c2c7a",
            "security_group_rule_id": "sgr-024f9c7dba62993c0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.security.data.http.myipaddr"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "smart_home_internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-internal/c824ab5214199bd1",
            "arn_suffix": "app/smart-home-lb-internal/c824ab5214199bd1",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-smart-home-lb-internal-1175805345.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-internal/c824ab5214199bd1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smart-home-lb-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d8a8a8088d8c2c7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0525c0728195a9f67"
              },
              {
                "subnet_id": "subnet-0c90a97ed9d5d9ab1"
              },
              {
                "subnet_id": "subnet-0e35bab42306dc5ba"
              }
            ],
            "subnets": [
              "subnet-0525c0728195a9f67",
              "subnet-0c90a97ed9d5d9ab1",
              "subnet-0e35bab42306dc5ba"
            ],
            "vpc_id": "vpc-09d4d9f46bf53a9b5",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "smart_home_public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-public/242cadec589da34d",
            "arn_suffix": "app/smart-home-lb-public/242cadec589da34d",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "smart-home-lb-public-1163591976.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-public/242cadec589da34d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smart-home-lb-public",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d8a8a8088d8c2c7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fd14e71dc877fdf"
              },
              {
                "subnet_id": "subnet-01a55fc0a880d82f0"
              },
              {
                "subnet_id": "subnet-0c78279507ce23e1b"
              }
            ],
            "subnets": [
              "subnet-00fd14e71dc877fdf",
              "subnet-01a55fc0a880d82f0",
              "subnet-0c78279507ce23e1b"
            ],
            "vpc_id": "vpc-09d4d9f46bf53a9b5",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-internal/c824ab5214199bd1/a3633f64f78928e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-internal/c824ab5214199bd1/a3633f64f78928e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-internal/c824ab5214199bd1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb.smart_home_internal_lb"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-public/242cadec589da34d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb.smart_home_public_lb"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "auth_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/auth-service-tg/296cc543d3f7ed6e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-internal/c824ab5214199bd1/a3633f64f78928e8/a6651c90c34cbce3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-internal/c824ab5214199bd1/a3633f64f78928e8/a6651c90c34cbce3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-internal/c824ab5214199bd1/a3633f64f78928e8",
            "priority": 130,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb.smart_home_internal_lb",
            "module.smart_home_load_balancer.aws_lb_listener.internal_listener",
            "module.smart_home_load_balancer.aws_lb_target_group.auth_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "heating_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/heating-service-tg/894238b2b76d8129",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0/38bc176e9fa7167f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0/38bc176e9fa7167f",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb.smart_home_public_lb",
            "module.smart_home_load_balancer.aws_lb_listener.public_listener",
            "module.smart_home_load_balancer.aws_lb_target_group.heating_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "light_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/light-service-tg/67ab41ba8bcac276",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0/eefe762598859e9b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0/eefe762598859e9b",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0",
            "priority": 110,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb.smart_home_public_lb",
            "module.smart_home_load_balancer.aws_lb_listener.public_listener",
            "module.smart_home_load_balancer.aws_lb_target_group.light_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "status_service_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/status-service-tg/3d59a517dafe659a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0/63560b3752d2301a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener-rule/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0/63560b3752d2301a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:listener/app/smart-home-lb-public/242cadec589da34d/e127c06ddabb5ac0",
            "priority": 120,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb.smart_home_public_lb",
            "module.smart_home_load_balancer.aws_lb_listener.public_listener",
            "module.smart_home_load_balancer.aws_lb_target_group.status_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/auth-service-tg/296cc543d3f7ed6e",
            "arn_suffix": "targetgroup/auth-service-tg/296cc543d3f7ed6e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/auth-service-tg/296cc543d3f7ed6e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-internal/c824ab5214199bd1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-service-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "heating_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/heating-service-tg/894238b2b76d8129",
            "arn_suffix": "targetgroup/heating-service-tg/894238b2b76d8129",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/heating-service-tg/894238b2b76d8129",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-public/242cadec589da34d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-service-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "light_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/light-service-tg/67ab41ba8bcac276",
            "arn_suffix": "targetgroup/light-service-tg/67ab41ba8bcac276",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/light-service-tg/67ab41ba8bcac276",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-public/242cadec589da34d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "light-service-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "status_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/status-service-tg/3d59a517dafe659a",
            "arn_suffix": "targetgroup/status-service-tg/3d59a517dafe659a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/status-service-tg/3d59a517dafe659a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:211125505847:loadbalancer/app/smart-home-lb-public/242cadec589da34d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-service-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d4d9f46bf53a9b5"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "auth_service_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/auth-service-tg/296cc543d3f7ed6e-20240306123910213700000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/auth-service-tg/296cc543d3f7ed6e",
            "target_id": "i-02a20442a07369e29"
          },
          "dependencies": [
            "module.auth_service.aws_instance.smart_home_server",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb_target_group.auth_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "light_service_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/light-service-tg/67ab41ba8bcac276-20240306100737946300000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/light-service-tg/67ab41ba8bcac276",
            "target_id": "i-005782ec435928db1"
          },
          "dependencies": [
            "module.light_service.aws_instance.smart_home_server",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb_target_group.light_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "smart_home_gr_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/heating-service-tg/894238b2b76d8129-2024030610074765610000000a",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/heating-service-tg/894238b2b76d8129",
            "target_id": "i-08d856e0095d14b05"
          },
          "dependencies": [
            "module.heating_service.aws_instance.smart_home_server",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb_target_group.heating_service"
          ]
        }
      ]
    },
    {
      "module": "module.smart_home_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "status_service_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/status-service-tg/3d59a517dafe659a-20240306100747561500000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:211125505847:targetgroup/status-service-tg/3d59a517dafe659a",
            "target_id": "i-053500751c86ccea9"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp",
            "module.smart_home_load_balancer.aws_lb_target_group.status_service",
            "module.status_service.aws_instance.smart_home_server"
          ]
        }
      ]
    },
    {
      "module": "module.status_service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "smart_home_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:211125505847:instance/i-053500751c86ccea9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053500751c86ccea9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smart-home-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f00ccbf3c251e09b",
            "private_dns": "ip-10-0-2-109.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.109",
            "public_dns": "ec2-18-171-188-164.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.188.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056c4e15c78326c0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a55fc0a880d82f0",
            "tags": {
              "Name": "status_service"
            },
            "tags_all": {
              "Name": "status_service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8a8a8088d8c2c7a"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.smart_home_security_grp"
          ]
        }
      ]
    }
  ]
}